sqlx-fmt/tests/snapshots/snapshots__multiline_raw_string.snap
---
source: sqlx-fmt/tests/snapshots.rs
expression: "fmt(\"fn f() {\\n    let _ = query!(r#\\\"select id, name\\n        from users\\n        where active\\\"#);\\n}\\n\")"
---
fn f() {
    let _ = query!(r#"
    SELECT
        id,
        name
    FROM
        users
    WHERE
        active
    "#);
}
