sqlx-fmt/tests/snapshots/snapshots__multiple_macros_in_one_file.snap
---
source: sqlx-fmt/tests/snapshots.rs
expression: fmt(src)
---

async fn run(pool: &PgPool) -> Result<()> {
    let user = sqlx::query!(r#"
    SELECT
        id
    FROM
        users
    WHERE
        id = $1
    "#, id)
        .fetch_one(pool)
        .await?;
    let all = query_as!(User, r#"
    SELECT
        id,
        name
    FROM
        users
    ORDER BY
        name
    "#)
        .fetch_all(pool)
        .await?;
    Ok(())
}
