sqlx-fmt/tests/snapshots/snapshots__query_as_with_type_argument.snap
---
source: sqlx-fmt/tests/snapshots.rs
expression: "fmt(r#\"fn f() { let _ = query_as!(User, \"select * from users where active = true\"); }\"#)"
---
fn f() { let _ = query_as!(User, r#"
SELECT
    *
FROM
    users
WHERE
    active = TRUE
"#); }
